myvagrant_rhel9/nexus_chatgpt/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
spec:
  type:
    NodePort
  ports:
  - port: 8081
    targetPort: 8081
    NodePort: 30666
  selector:
    app: nexus
